# machinator

./: .gitignore  .gitmodules  README.md  TODO.md  cabal.project  flake.nix
example/: aggregate.mcn  feature.mcn  filter-expression.mcn  keywords.mcn
machinator-core/: ambiata-machinator-core.cabal
machinator-core/src/Machinator/: Core.hs
machinator-core/src/Machinator/Core/: Graph.hs  Lexer.hs  Parser.hs  Pretty.hs
machinator-core/src/Machinator/Core/Data/: Definition.hs  Position.hs  Token.hs  Version.hs
machinator-haskell/: ambiata-machinator-haskell.cabal
machinator-haskell/main/: Main.hs
machinator-haskell/src/Machinator/Haskell/: Gen.hs
machinator-haskell/src/Machinator/Haskell/Aeson/: CodeGen.hs
machinator-haskell/src/Machinator/Haskell/Scheme/: Types.hs
machinator-haskell/src/Machinator/Haskell/TH/: Types.hs
machinator-purescript/src/Machinator/Purescript/Scheme/Types/: Codegen.hs
machinator-python/: ambiata-machinator-python.cabal
machinator-python/main/: Main.hs
machinator-python/src/Machinator/: Python.hs
machinator-python/src/Machinator/Python/: Mangle.hs
machinator-python/src/Machinator/Python/Data/: Types.hs
machinator-python/src/Machinator/Python/Scheme/: Types.hs
machinator-python/src/Machinator/Python/Scheme/Types/: Codegen.hs
machinator-scala/: ambiata-machinator-purescript.cabal  ambiata-machinator-scala.cabal
machinator-scala/main/: Main.hs
machinator-scala/src/Machinator/: Scala.hs
machinator-scala/src/Machinator/Scala/Data/: Types.hs
machinator-scala/src/Machinator/Scala/Scheme/: Types.hs
machinator-scala/src/Machinator/Scala/Scheme/Circe/: Codegen.hs
machinator-scala/src/Machinator/Scala/Scheme/Types/: Codegen.hs
machinator-swagger/: ambiata-machinator-swagger.cabal
machinator-swagger/main/: Main.hs
machinator-swagger/src/Machinator/: Swagger.hs
machinator-swagger/src/Machinator/Swagger/Data/: Types.hs
machinator-swagger/src/Machinator/Swagger/Scheme/: Types.hs
machinator-swagger/src/Machinator/Swagger/Scheme/Types/: Codegen.hs
